added div borders for all boxes to rough out the design

--- a/index.html
+++ b/index.html
@@ -14,13 +14,82 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <h1 class="display-4">Work Day Scheduler</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p><br>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      <!-- <div class="timeblock">
+        <span class="hourly-div" id="hourly-div">
+          <label for="9am">9 AM</label>
+          <textarea id="hourly-todo" name="9am" cols="cols-8"></textarea>
+        </span>
+
+        </div>
+      </div> -->
       <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col mb-1" id="hourly-div">
+          hours
+        </div>
+        <div class="col-10 mb-1">
+          To-do description
+        </div>
+        <div class="col mb-1">
+          Save Btn
+        </div>
+      </div>
+      <div class="row">
+        <div class="col mb-1" id="hourly-div">
+          hours
+        </div>
+        <div class="col-10 mb-1">
+          To-do description
+        </div>
+        <div class="col mb-1">
+          Save Btn
+        </div>
+      </div>
+      <div class="row">
+        <div class="col mb-1" id="hourly-div">
+          hours
+        </div>
+        <div class="col-10 mb-1">
+          To-do description
+        </div>
+        <div class="col mb-1">
+          Save Btn
+        </div>
+      </div>
+      <div class="row">
+        <div class="col mb-1" id="hourly-div">
+          hours
+        </div>
+        <div class="col-10 mb-1">
+          To-do description
+        </div>
+        <div class="col mb-1">
+          Save Btn
+        </div>
+      </div>
+      <div class="row">
+        <div class="col mb-1" id="hourly-div">
+          hours
+        </div>
+        <div class="col-10 mb-1">
+          To-do description
+        </div>
+        <div class="col mb-1">
+          Save Btn
+        </div>
+      </div>
+      <!-- main container close tag below-->
     </div>
+    <footer class="footer-area">
+      <div class="col-12">
+        Footer Area
+      </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
