build out hourly rows divs

--- a/index.html
+++ b/index.html
@@ -28,61 +28,39 @@
         </div>
       </div> -->
       <!-- Timeblocks go here -->
-      <div class="row">
-        <div class="col mb-1" id="hourly-div">
-          hours
+      <!-- <div class="row">
+        <div class="col mb-1 hour" id="hourly-div">
+          9AM
         </div>
-        <div class="col-10 mb-1">
-          To-do description
+        <div class="col-10 mb-1 description">
+          <textarea></textarea>
         </div>
-        <div class="col mb-1">
-          Save Btn
-        </div>
-      </div>
-      <div class="row">
-        <div class="col mb-1" id="hourly-div">
-          hours
-        </div>
-        <div class="col-10 mb-1">
-          To-do description
-        </div>
-        <div class="col mb-1">
-          Save Btn
+        <div class="col mb-1 saveBtn">
+          <i class="far fa-save"></i>
         </div>
       </div>
       <div class="row">
-        <div class="col mb-1" id="hourly-div">
+        <div class="col mb-1 hour" id="hourly-div">
           hours
         </div>
-        <div class="col-10 mb-1">
+        <div class="col-10 mb-1 description">
           To-do description
         </div>
-        <div class="col mb-1">
-          Save Btn
+        <div class="col mb-1 saveBtn">
+          <i class="far fa-save"></i>
         </div>
       </div>
       <div class="row">
-        <div class="col mb-1" id="hourly-div">
+        <div class="col mb-1 hour" id="hourly-div">
           hours
         </div>
-        <div class="col-10 mb-1">
+        <div class="col-10 mb-1 description">
           To-do description
         </div>
-        <div class="col mb-1">
-          Save Btn
+        <div class="col mb-1 saveBtn">
+          <i class="far fa-save"></i>
         </div>
-      </div>
-      <div class="row">
-        <div class="col mb-1" id="hourly-div">
-          hours
-        </div>
-        <div class="col-10 mb-1">
-          To-do description
-        </div>
-        <div class="col mb-1">
-          Save Btn
-        </div>
-      </div>
+      </div> -->
       <!-- main container close tag below-->
     </div>
     <footer class="footer-area">
