incorporated time comparison to determine past, present and future

--- a/index.html
+++ b/index.html
@@ -18,51 +18,29 @@
       <p class="lead">A simple calendar app for scheduling your work day</p><br>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-      <!-- <div class="timeblock">
-        <span class="hourly-div" id="hourly-div">
-          <label for="9am">9 AM</label>
-          <textarea id="hourly-todo" name="9am" cols="cols-8"></textarea>
-        </span>
+    <main class="schedule-view">
+      <div class="container">
+        <!-- Timeblocks go here -->
+        
+        <!-- <div class="row">
+        <div class="row">
 
-        </div>
-      </div> -->
-      <!-- Timeblocks go here -->
-      <!-- <div class="row">
-        <div class="col mb-1 hour" id="hourly-div">
-          9AM
-        </div>
-        <div class="col-10 mb-1 description">
-          <textarea></textarea>
-        </div>
-        <div class="col mb-1 saveBtn">
-          <i class="far fa-save"></i>
-        </div>
+          <div class="col mb-1 hour" id="hourly-div">
+            9AM
+          </div>
+
+          <div class="col-10 mb-1 description">
+            <textarea></textarea>
+          </div>
+
+          <div class="col mb-1 saveBtn">
+            <i class="far fa-save"></i>
+          </div>
+
+        </div> -->
+        <!-- main container close tag below-->
       </div>
-      <div class="row">
-        <div class="col mb-1 hour" id="hourly-div">
-          hours
-        </div>
-        <div class="col-10 mb-1 description">
-          To-do description
-        </div>
-        <div class="col mb-1 saveBtn">
-          <i class="far fa-save"></i>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col mb-1 hour" id="hourly-div">
-          hours
-        </div>
-        <div class="col-10 mb-1 description">
-          To-do description
-        </div>
-        <div class="col mb-1 saveBtn">
-          <i class="far fa-save"></i>
-        </div>
-      </div> -->
-      <!-- main container close tag below-->
-    </div>
+    </main>
     <footer class="footer-area">
       <div class="col-12">
         Footer Area
