added test code to extract textarea input from click event

--- a/index.html
+++ b/index.html
@@ -13,37 +13,27 @@
   </head>
 
   <body>
+    <!-- Header section of the scheduler with day/date displayed -->
     <header class="jumbotron">
       <h1 class="display-4">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p><br>
+      <!-- Displays day, date based off of moment.js -->
       <p id="currentDay" class="lead"></p>
     </header>
+    <!-- End of Header section -->
+
+    <!-- Main schedule view starts here -->
     <main class="schedule-view">
       <div class="container">
-        <!-- Timeblocks go here -->
-        
-        <!-- <div class="row">
-        <div class="row">
-
-          <div class="col mb-1 hour" id="hourly-div">
-            9AM
-          </div>
-
-          <div class="col-10 mb-1 description">
-            <textarea></textarea>
-          </div>
-
-          <div class="col mb-1 saveBtn">
-            <i class="far fa-save"></i>
-          </div>
-
-        </div> -->
-        <!-- main container close tag below-->
+        <!-- Timeblocks dynamically created -->
       </div>
     </main>
+    <!-- Main schedule view ends here -->
+
+    <!-- Footer section below -->
     <footer class="footer-area">
       <div class="col-12">
-        Footer Area
+        &copy 2021 - Hung Tang
       </div>
     </footer>
 
